--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,12 @@
 
   <body>
     <main class="container mx-auto mt-28 px-5 flex">
+      <% if user_signed_in? %>
+        <p>
+          Logged in as <%= current_user.email %>
+          <%= button_to "Log out", destroy_user_session_path, method: :delete %>
+        </p>
+      <% end %>
       <%= yield %>
     </main>
   </body>
